<resources>
    <string name="app_name">BSG Auth</string>
    <string name="sample_totp">365 826</string>
    <string name="sample_website">nova.service</string>
    <string name="sample_date">09.01.2018</string>
    <string name="sample_device_name">Iphone - Apple Iphone</string>
    <string name="sample_one_time_pass">238 923</string>
    <string name="desciption_content_btn_homescreen_more">More</string>
    <string name="menu_connected_devices">Connected Devices</string>
    <string name="menu_delete_account">Delete Account</string>
    <string name="menu_logout">Log out</string>
    <string name="switch_to_pin_button_text">Auth with pin code</string>
    <string name="fingerprint_request_text">Put your finger on the fingerprint sensor</string>
    <string name="redirecting_to_pin_text">You will be redirected to pin code auth</string>
    <string name="not_authenticated_exit_text">You aren\'t authorised to access to this application</string>
    <string name="authenticate_with_pin_button_text">Authenticate</string>
    <string name="pin_code_request_text">Enter your pin code</string>
    <string name="pin_code_auth_title">Auth with Pin Code</string>
    <string name="fingerprint_auth_title">Authentication</string>
    <string name="phone_number_title">Phone number</string>
    <string name="fingerprint_unavailable_text">Fingerprint Authentication is unavailable on your device</string>
    <string name="description_text">Description Text</string>
    <string name="add_new_account">Add new account</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="enter_code_manually">Enter code manually</string>
    <string name="enter_token_here_hint">Enter your token here</string>
    <string name="ok_btn">OK</string>
    <string name="text_descpription_to_token">One time pass is</string>
    <string name="your_code_is_successful">Your code is saved successfully!</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="token_is_not_valid_text">Your token isn\'t valid. Please try again.</string>
    <string name="button_submit_phone_number">Submit</string>
    <string name="hint">Phone number</string>
    <string name="devices_switch_name">Allow multiple devices</string>
    <string name="homescreen_title">Main</string>
    <string name="item_delete_title">Delete</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="select">Select…</string>
    <string name="enter_correct_code_toast">Enter correct code</string>
</resources>
