<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/enter_code_manually" />

    <TextView
        android:id="@+id/one_time_pass_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_tv__pass_declaration"
        android:text="@string/text_descpription_to_token"
        android:textSize="@dimen/tsize_one_time_pass"
        app:layout_constraintBaseline_toBaselineOf="@+id/one_time_pass"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/one_time_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_tv_one_time_pass"
        android:layout_marginTop="@dimen/margin_top_tv_one_time_pass"
        android:gravity="center_vertical"
        android:text="@string/sample_one_time_pass"
        android:textSize="@dimen/tsize_one_time_pass"
        app:layout_constraintStart_toEndOf="@+id/one_time_pass_is"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_btn_ok"
        android:background="@drawable/btn_rounded"
        android:text="@string/ok_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>