<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_new_account" />

    <TextView
        android:id="@+id/descriptionTextHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_tv_description_heading"
        android:layout_marginTop="@dimen/margin_tv_description_heading"
        android:gravity="center_horizontal"
        android:text="@string/description_text"
        android:textSize="@dimen/tsize_description_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/scanQR_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_btn_add_new_account"
        android:paddingLeft="@dimen/padding_btn_add_new_account"
        android:paddingRight="@dimen/padding_btn_add_new_account"
        android:text="@string/scan_qr_code"
        android:background="@drawable/btn_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/descriptionTextHeading"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/enter_code_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_btn_add_new_account"
        android:paddingLeft="@dimen/padding_btn_add_new_account"
        android:paddingRight="@dimen/padding_btn_add_new_account"
        android:text="@string/enter_code_manually"
        android:background="@drawable/btn_rounded"
        app:layout_constraintEnd_toEndOf="@+id/scanQR_btn"
        app:layout_constraintStart_toStartOf="@+id/scanQR_btn"
        app:layout_constraintTop_toBottomOf="@+id/scanQR_btn" />


</android.support.constraint.ConstraintLayout>